--- a/Assets/imgui.ini
+++ b/Assets/imgui.ini
@@ -1,10 +1,20 @@
 [Window][Debug##Default]
-Pos=60,60
+Pos=96,116
 Size=400,400
 Collapsed=0
 
 [Window][a]
-Pos=581,156
+Pos=301,120
 Size=160,217
+Collapsed=0
+
+[Window][Syari State]
+Pos=32,86
+Size=349,230
+Collapsed=0
+
+[Window][Maguro State]
+Pos=69,263
+Size=199,124
 Collapsed=0
 
