--- a/GameBaseDx11.vcxproj
+++ b/GameBaseDx11.vcxproj
@@ -153,6 +153,7 @@
     <ClCompile Include="imgui\imgui_impl_win32.cpp" />
     <ClCompile Include="imgui\imgui_tables.cpp" />
     <ClCompile Include="imgui\imgui_widgets.cpp" />
+    <ClCompile Include="Imgui_Obj.cpp" />
     <ClCompile Include="Maguro.cpp" />
     <ClCompile Include="PlayScene.cpp" />
     <ClCompile Include="RedBox.cpp" />
@@ -191,6 +192,7 @@
     <ClInclude Include="imgui\imstb_rectpack.h" />
     <ClInclude Include="imgui\imstb_textedit.h" />
     <ClInclude Include="imgui\imstb_truetype.h" />
+    <ClInclude Include="Imgui_Obj.h" />
     <ClInclude Include="Maguro.h" />
     <ClInclude Include="PlayScene.h" />
     <ClInclude Include="RedBox.h" />
