--- a/Assets/imgui.ini
+++ b/Assets/imgui.ini
@@ -9,12 +9,17 @@ Size=160,217
 Collapsed=0
 
 [Window][Syari State]
-Pos=-18,436
+Pos=29,449
 Size=349,230
 Collapsed=0
 
 [Window][Maguro State]
-Pos=143,344
+Pos=13,335
 Size=199,124
+Collapsed=0
+
+[Window][Time]
+Pos=60,60
+Size=201,65
 Collapsed=0
 
