--- a/GameBaseDx11.vcxproj
+++ b/GameBaseDx11.vcxproj
@@ -127,6 +127,7 @@
   <ItemGroup>
     <ClCompile Include="BlueBox.cpp" />
     <ClCompile Include="Controller.cpp" />
+    <ClCompile Include="DarwManager.cpp" />
     <ClCompile Include="Engine\Audio.cpp" />
     <ClCompile Include="Engine\BoxCollider.cpp" />
     <ClCompile Include="Engine\Camera.cpp" />
@@ -156,15 +157,19 @@
     <ClCompile Include="imgui\imgui_widgets.cpp" />
     <ClCompile Include="Imgui_Obj.cpp" />
     <ClCompile Include="Maguro.cpp" />
+    <ClCompile Include="ObjectManager.cpp" />
     <ClCompile Include="PlayScene.cpp" />
     <ClCompile Include="RedBox.cpp" />
     <ClCompile Include="Stage.cpp" />
+    <ClCompile Include="StartScene.cpp" />
     <ClCompile Include="Syari.cpp" />
     <ClCompile Include="TestScene.cpp" />
+    <ClCompile Include="Time.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BlueBox.h" />
     <ClInclude Include="Controller.h" />
+    <ClInclude Include="DarwManager.h" />
     <ClInclude Include="Engine\Audio.h" />
     <ClInclude Include="Engine\BoxCollider.h" />
     <ClInclude Include="Engine\Camera.h" />
@@ -196,11 +201,14 @@
     <ClInclude Include="imgui\imstb_truetype.h" />
     <ClInclude Include="Imgui_Obj.h" />
     <ClInclude Include="Maguro.h" />
+    <ClInclude Include="ObjectManager.h" />
     <ClInclude Include="PlayScene.h" />
     <ClInclude Include="RedBox.h" />
     <ClInclude Include="Stage.h" />
+    <ClInclude Include="StartScene.h" />
     <ClInclude Include="Syari.h" />
     <ClInclude Include="TestScene.h" />
+    <ClInclude Include="Time.h" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Assets\Shader\Debug3D.hlsl">
