--- a/Assets/imgui.ini
+++ b/Assets/imgui.ini
@@ -9,17 +9,22 @@ Size=160,217
 Collapsed=0
 
 [Window][Syari State]
-Pos=60,54
-Size=32,32
+Pos=33,77
+Size=232,130
 Collapsed=0
 
 [Window][Maguro State]
-Pos=62,56
-Size=32,32
+Pos=28,217
+Size=236,130
 Collapsed=0
 
 [Window][Time]
-Pos=58,52
-Size=32,32
+Pos=28,358
+Size=251,122
+Collapsed=0
+
+[Window][accel]
+Pos=60,60
+Size=137,48
 Collapsed=0
 
