--- a/GameBaseDx11.vcxproj.filters
+++ b/GameBaseDx11.vcxproj.filters
@@ -121,6 +121,7 @@
     <ClCompile Include="StartScene.cpp" />
     <ClCompile Include="DarwManager.cpp" />
     <ClCompile Include="Time.cpp" />
+    <ClCompile Include="Gauge.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\BoxCollider.h">
@@ -221,6 +222,7 @@
     <ClInclude Include="StartScene.h" />
     <ClInclude Include="DarwManager.h" />
     <ClInclude Include="Time.h" />
+    <ClInclude Include="Gauge.h" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Assets\Shader\Simple2D.hlsl">
