--- a/GameBaseDx11.vcxproj
+++ b/GameBaseDx11.vcxproj
@@ -125,6 +125,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Billboard.cpp" />
     <ClCompile Include="BlueBox.cpp" />
     <ClCompile Include="Controller.cpp" />
     <ClCompile Include="DarwManager.cpp" />
@@ -160,6 +161,7 @@
     <ClCompile Include="Imgui_Obj.cpp" />
     <ClCompile Include="Maguro.cpp" />
     <ClCompile Include="ObjectManager.cpp" />
+    <ClCompile Include="Particle.cpp" />
     <ClCompile Include="PlayScene.cpp" />
     <ClCompile Include="RedBox.cpp" />
     <ClCompile Include="Stage.cpp" />
@@ -169,6 +171,7 @@
     <ClCompile Include="Time.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Billboard.h" />
     <ClInclude Include="BlueBox.h" />
     <ClInclude Include="Controller.h" />
     <ClInclude Include="DarwManager.h" />
@@ -206,6 +209,7 @@
     <ClInclude Include="Imgui_Obj.h" />
     <ClInclude Include="Maguro.h" />
     <ClInclude Include="ObjectManager.h" />
+    <ClInclude Include="Particle.h" />
     <ClInclude Include="PlayScene.h" />
     <ClInclude Include="RedBox.h" />
     <ClInclude Include="Stage.h" />
@@ -215,6 +219,10 @@
     <ClInclude Include="Time.h" />
   </ItemGroup>
   <ItemGroup>
+    <FxCompile Include="Assets\Shader\BillBoard.hlsl">
+      <EntryPointName Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">VS</EntryPointName>
+      <EntryPointName Condition="'$(Configuration)|$(Platform)'=='Release|x64'">VS</EntryPointName>
+    </FxCompile>
     <FxCompile Include="Assets\Shader\Debug3D.hlsl">
       <EntryPointName Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">VS</EntryPointName>
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Vertex</ShaderType>
