--- a/GameBaseDx11.vcxproj
+++ b/GameBaseDx11.vcxproj
@@ -163,6 +163,7 @@
     <ClCompile Include="ObjectManager.cpp" />
     <ClCompile Include="Particle.cpp" />
     <ClCompile Include="PlayScene.cpp" />
+    <ClCompile Include="PoryLine.cpp" />
     <ClCompile Include="RedBox.cpp" />
     <ClCompile Include="Stage.cpp" />
     <ClCompile Include="StartScene.cpp" />
@@ -211,6 +212,7 @@
     <ClInclude Include="ObjectManager.h" />
     <ClInclude Include="Particle.h" />
     <ClInclude Include="PlayScene.h" />
+    <ClInclude Include="PoryLine.h" />
     <ClInclude Include="RedBox.h" />
     <ClInclude Include="Stage.h" />
     <ClInclude Include="StartScene.h" />
