--- a/GameBaseDx11.vcxproj.filters
+++ b/GameBaseDx11.vcxproj.filters
@@ -127,6 +127,7 @@
     </ClCompile>
     <ClCompile Include="Particle.cpp" />
     <ClCompile Include="Billboard.cpp" />
+    <ClCompile Include="PoryLine.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\BoxCollider.h">
@@ -233,6 +234,7 @@
     </ClInclude>
     <ClInclude Include="Particle.h" />
     <ClInclude Include="Billboard.h" />
+    <ClInclude Include="PoryLine.h" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Assets\Shader\Simple2D.hlsl">
