--- a/GameBaseDx11.vcxproj
+++ b/GameBaseDx11.vcxproj
@@ -162,6 +162,7 @@
     <ClCompile Include="imgui\imgui_widgets.cpp" />
     <ClCompile Include="Imgui_Obj.cpp" />
     <ClCompile Include="Maguro.cpp" />
+    <ClCompile Include="Neta.cpp" />
     <ClCompile Include="ObjectManager.cpp" />
     <ClCompile Include="Particle.cpp" />
     <ClCompile Include="PlayScene.cpp" />
@@ -213,6 +214,7 @@
     <ClInclude Include="imgui\imstb_truetype.h" />
     <ClInclude Include="Imgui_Obj.h" />
     <ClInclude Include="Maguro.h" />
+    <ClInclude Include="Neta.h" />
     <ClInclude Include="ObjectManager.h" />
     <ClInclude Include="Particle.h" />
     <ClInclude Include="PlayScene.h" />
