--- a/GameBaseDx11.vcxproj.filters
+++ b/GameBaseDx11.vcxproj.filters
@@ -133,6 +133,8 @@
     <ClCompile Include="Neta.cpp" />
     <ClCompile Include="Crab.cpp" />
     <ClCompile Include="Cannon.cpp" />
+    <ClCompile Include="Ball.cpp" />
+    <ClCompile Include="Timer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\BoxCollider.h">
@@ -245,6 +247,8 @@
     <ClInclude Include="Neta.h" />
     <ClInclude Include="Crab.h" />
     <ClInclude Include="Cannon.h" />
+    <ClInclude Include="Ball.h" />
+    <ClInclude Include="Timer.h" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Assets\Shader\Simple2D.hlsl">
