--- a/GameBaseDx11.vcxproj
+++ b/GameBaseDx11.vcxproj
@@ -171,6 +171,7 @@
     <ClCompile Include="PlayScene.cpp" />
     <ClCompile Include="PoryLine.cpp" />
     <ClCompile Include="RedBox.cpp" />
+    <ClCompile Include="SalmonRoe.cpp" />
     <ClCompile Include="Stage.cpp" />
     <ClCompile Include="StartScene.cpp" />
     <ClCompile Include="Syari.cpp" />
@@ -227,6 +228,7 @@
     <ClInclude Include="PlayScene.h" />
     <ClInclude Include="PoryLine.h" />
     <ClInclude Include="RedBox.h" />
+    <ClInclude Include="SalmonRoe.h" />
     <ClInclude Include="Stage.h" />
     <ClInclude Include="StartScene.h" />
     <ClInclude Include="Syari.h" />
