--- a/GameBaseDx11.vcxproj
+++ b/GameBaseDx11.vcxproj
@@ -166,6 +166,7 @@
     <ClCompile Include="Imgui_Obj.cpp" />
     <ClCompile Include="Maguro.cpp" />
     <ClCompile Include="Neta.cpp" />
+    <ClCompile Include="OBB.cpp" />
     <ClCompile Include="ObjectManager.cpp" />
     <ClCompile Include="Particle.cpp" />
     <ClCompile Include="PlayScene.cpp" />
@@ -223,6 +224,7 @@
     <ClInclude Include="Imgui_Obj.h" />
     <ClInclude Include="Maguro.h" />
     <ClInclude Include="Neta.h" />
+    <ClInclude Include="OBB.h" />
     <ClInclude Include="ObjectManager.h" />
     <ClInclude Include="Particle.h" />
     <ClInclude Include="PlayScene.h" />
