--- a/GameBaseDx11.vcxproj.filters
+++ b/GameBaseDx11.vcxproj.filters
@@ -27,6 +27,9 @@
     <Filter Include="Imgui">
       <UniqueIdentifier>{c377ccd7-450d-46c7-92a2-e124bc848ff5}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Scene">
+      <UniqueIdentifier>{92222d39-8410-49a8-8f4a-cd055d5360de}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Engine\BoxCollider.cpp">
@@ -83,14 +86,12 @@
     <ClCompile Include="Engine\Transform.cpp">
       <Filter>01Engine\GameObject</Filter>
     </ClCompile>
-    <ClCompile Include="TestScene.cpp" />
     <ClCompile Include="Engine\Audio.cpp">
       <Filter>01Engine\ResourceManager</Filter>
     </ClCompile>
     <ClCompile Include="Engine\Text.cpp">
       <Filter>01Engine\ResourceManager</Filter>
     </ClCompile>
-    <ClCompile Include="PlayScene.cpp" />
     <ClCompile Include="Syari.cpp" />
     <ClCompile Include="Maguro.cpp" />
     <ClCompile Include="Stage.cpp" />
@@ -117,9 +118,6 @@
     </ClCompile>
     <ClCompile Include="Imgui_Obj.cpp" />
     <ClCompile Include="Goal.cpp" />
-    <ClCompile Include="ObjectManager.cpp" />
-    <ClCompile Include="StartScene.cpp" />
-    <ClCompile Include="DarwManager.cpp" />
     <ClCompile Include="Time.cpp" />
     <ClCompile Include="Gauge.cpp" />
     <ClCompile Include="Engine\ModelManager.cpp">
@@ -128,14 +126,34 @@
     <ClCompile Include="Particle.cpp" />
     <ClCompile Include="Billboard.cpp" />
     <ClCompile Include="PoryLine.cpp" />
-    <ClCompile Include="GoalScene.cpp" />
-    <ClCompile Include="GameOverScene.cpp" />
     <ClCompile Include="Neta.cpp" />
     <ClCompile Include="Crab.cpp" />
     <ClCompile Include="Cannon.cpp" />
     <ClCompile Include="Ball.cpp" />
     <ClCompile Include="Timer.cpp" />
     <ClCompile Include="SalmonRoe.cpp" />
+    <ClCompile Include="PlayScene.cpp">
+      <Filter>Scene</Filter>
+    </ClCompile>
+    <ClCompile Include="GameOverScene.cpp">
+      <Filter>Scene</Filter>
+    </ClCompile>
+    <ClCompile Include="DarwManager.cpp">
+      <Filter>Scene</Filter>
+    </ClCompile>
+    <ClCompile Include="ObjectManager.cpp">
+      <Filter>02Shader</Filter>
+    </ClCompile>
+    <ClCompile Include="TestScene.cpp">
+      <Filter>Scene</Filter>
+    </ClCompile>
+    <ClCompile Include="StartScene.cpp">
+      <Filter>Scene</Filter>
+    </ClCompile>
+    <ClCompile Include="GoalScene.cpp">
+      <Filter>Scene</Filter>
+    </ClCompile>
+    <ClCompile Include="OBB.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\BoxCollider.h">
@@ -192,14 +210,12 @@
     <ClInclude Include="Engine\Transform.h">
       <Filter>01Engine\GameObject</Filter>
     </ClInclude>
-    <ClInclude Include="TestScene.h" />
     <ClInclude Include="Engine\Audio.h">
       <Filter>01Engine\ResourceManager</Filter>
     </ClInclude>
     <ClInclude Include="Engine\Text.h">
       <Filter>01Engine\ResourceManager</Filter>
     </ClInclude>
-    <ClInclude Include="PlayScene.h" />
     <ClInclude Include="Syari.h" />
     <ClInclude Include="Maguro.h" />
     <ClInclude Include="Stage.h" />
@@ -232,9 +248,6 @@
     </ClInclude>
     <ClInclude Include="Imgui_Obj.h" />
     <ClInclude Include="Goal.h" />
-    <ClInclude Include="ObjectManager.h" />
-    <ClInclude Include="StartScene.h" />
-    <ClInclude Include="DarwManager.h" />
     <ClInclude Include="Time.h" />
     <ClInclude Include="Gauge.h" />
     <ClInclude Include="Engine\ModelManager.h">
@@ -243,14 +256,34 @@
     <ClInclude Include="Particle.h" />
     <ClInclude Include="Billboard.h" />
     <ClInclude Include="PoryLine.h" />
-    <ClInclude Include="GoalScene.h" />
-    <ClInclude Include="GameOverScene.h" />
     <ClInclude Include="Neta.h" />
     <ClInclude Include="Crab.h" />
     <ClInclude Include="Cannon.h" />
     <ClInclude Include="Ball.h" />
     <ClInclude Include="Timer.h" />
     <ClInclude Include="SalmonRoe.h" />
+    <ClInclude Include="PlayScene.h">
+      <Filter>Scene</Filter>
+    </ClInclude>
+    <ClInclude Include="GameOverScene.h">
+      <Filter>Scene</Filter>
+    </ClInclude>
+    <ClInclude Include="DarwManager.h">
+      <Filter>Scene</Filter>
+    </ClInclude>
+    <ClInclude Include="ObjectManager.h">
+      <Filter>02Shader</Filter>
+    </ClInclude>
+    <ClInclude Include="TestScene.h">
+      <Filter>Scene</Filter>
+    </ClInclude>
+    <ClInclude Include="StartScene.h">
+      <Filter>Scene</Filter>
+    </ClInclude>
+    <ClInclude Include="GoalScene.h">
+      <Filter>Scene</Filter>
+    </ClInclude>
+    <ClInclude Include="OBB.h" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Assets\Shader\Simple2D.hlsl">
