--- a/GameBaseDx11.vcxproj
+++ b/GameBaseDx11.vcxproj
@@ -179,6 +179,7 @@
     <ClCompile Include="Stage.cpp" />
     <ClCompile Include="StartScene.cpp" />
     <ClCompile Include="Syari.cpp" />
+    <ClCompile Include="TestButton.cpp" />
     <ClCompile Include="TestScene.cpp" />
     <ClCompile Include="Time.cpp" />
     <ClCompile Include="Timer.cpp" />
@@ -240,6 +241,7 @@
     <ClInclude Include="Stage.h" />
     <ClInclude Include="StartScene.h" />
     <ClInclude Include="Syari.h" />
+    <ClInclude Include="TestButton.h" />
     <ClInclude Include="TestScene.h" />
     <ClInclude Include="Time.h" />
     <ClInclude Include="Timer.h" />
