ini出来ない imgui出来ない ポーズ画面作成失敗

--- a/Assets/imgui.ini
+++ b/Assets/imgui.ini
@@ -29,7 +29,17 @@ Size=220,598
 Collapsed=1
 
 [Window][Test Window]
+Pos=101,445
+Size=202,236
+Collapsed=0
+
+[Window][troll]
 Pos=60,60
-Size=128,117
+Size=32,35
+Collapsed=0
+
+[Window][Botton Pos]
+Pos=328,470
+Size=164,123
 Collapsed=0
 
