--- a/GameBaseDx11.vcxproj
+++ b/GameBaseDx11.vcxproj
@@ -170,6 +170,7 @@
     <ClCompile Include="Imgui_Obj.cpp" />
     <ClCompile Include="Maguro.cpp" />
     <ClCompile Include="OBB.cpp" />
+    <ClCompile Include="ObjectManager.cpp" />
     <ClCompile Include="Particle.cpp" />
     <ClCompile Include="Pause.cpp" />
     <ClCompile Include="PlayScene.cpp" />
@@ -229,6 +230,7 @@
     <ClInclude Include="Imgui_Obj.h" />
     <ClInclude Include="Maguro.h" />
     <ClInclude Include="OBB.h" />
+    <ClInclude Include="ObjectManager.h" />
     <ClInclude Include="Particle.h" />
     <ClInclude Include="Pause.h" />
     <ClInclude Include="PlayScene.h" />
