--- a/GameBaseDx11.vcxproj
+++ b/GameBaseDx11.vcxproj
@@ -147,6 +147,7 @@
     <ClCompile Include="Engine\Image.cpp" />
     <ClCompile Include="Engine\IniOperator.cpp" />
     <ClCompile Include="Engine\Input.cpp" />
+    <ClCompile Include="Engine\JsonOperator.cpp" />
     <ClCompile Include="Engine\Main.cpp" />
     <ClCompile Include="Engine\Math.cpp" />
     <ClCompile Include="Engine\Model.cpp" />
@@ -169,7 +170,6 @@
     <ClCompile Include="imgui\imgui_tables.cpp" />
     <ClCompile Include="imgui\imgui_widgets.cpp" />
     <ClCompile Include="Imgui_Obj.cpp" />
-    <ClCompile Include="JsonOperator.cpp" />
     <ClCompile Include="Maguro.cpp" />
     <ClCompile Include="OBB.cpp" />
     <ClCompile Include="Particle.cpp" />
@@ -207,6 +207,7 @@
     <ClInclude Include="Engine\Image.h" />
     <ClInclude Include="Engine\IniOperator.h" />
     <ClInclude Include="Engine\Input.h" />
+    <ClInclude Include="Engine\JsonOperator.h" />
     <ClInclude Include="Engine\Math.h" />
     <ClInclude Include="Engine\Model.h" />
     <ClInclude Include="Engine\ModelManager.h" />
@@ -230,7 +231,6 @@
     <ClInclude Include="imgui\imstb_textedit.h" />
     <ClInclude Include="imgui\imstb_truetype.h" />
     <ClInclude Include="Imgui_Obj.h" />
-    <ClInclude Include="JsonOperator.h" />
     <ClInclude Include="Maguro.h" />
     <ClInclude Include="OBB.h" />
     <ClInclude Include="Particle.h" />
